fix hw2 LaTex formatting

--- a/hw/Homework_02.ipynb
+++ b/hw/Homework_02.ipynb
@@ -159,11 +159,27 @@
     "\n",
     "**b)** the chance that there is at least one freshman and at least one sophomore in a simple random sample of 5 students taken from a group of 10 freshmen and 10 sophomores\n",
     "\n",
-    "**c)** the chance that it rains every day next week if the daily chances of rain are given by\n",
-    "\n",
-    "|Sun|Mon|Tue|Wed|Thu|Fri|Sat|\n",
-    "|-|-|-|-|-|-|-|\n",
-    "|$$0.9$$|$$0.95$$|$$0.95$$|$$0.9$$|$$0.9$$|$$0.85$$|$$0.8$$|"
+    "**c)** the chance that it rains every day next week if the daily chances of rain are given by"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "#question": false,
+    "#solution": false,
+    "#staff": false,
+    "#student": false
+   },
+   "source": [
+    "$$\n",
+    "\\begin{array}{|c|c|c|c|c|c|c|}\n",
+    "\\hline\n",
+    "\\text{Sun} & \\text{Mon} & \\text{Tue} & \\text{Wed} & \\text{Thu} & \\text{Fri} & \\text{Sat} \\\\\n",
+    "\\hline\n",
+    "0.9 & 0.95 & 0.95 & 0.9 & 0.9 & 0.85 & 0.8 \\\\\n",
+    "\\hline\n",
+    "\\end{array}\n",
+    "$$"
    ]
   },
   {
@@ -197,8 +213,9 @@
     "\n",
     "Here is a list of events, each of which is a union or a complement of a union.\n",
     "\n",
-    "(A) $\\displaystyle \\left( \\cup_{i=1}^n A_i \\right)^c$ $~~~~~~~~~~$ (B) $\\displaystyle \\cup_{i=1}^n C_i $\n",
-    "$~~~~~~~~~~$ (C) $\\displaystyle \\left( \\cup_{i=1}^n C_i \\right)^c$\n",
+    "- (A) $(\\cup_{i=1}^n A_i)^c$\n",
+    "- (B) $\\cup_{i=1}^n C_i$\n",
+    "- (C) $(\\cup_{i=1}^n C_i)^c$\n",
     "\n",
     "Match each event below with the correct choice from among (A), (B), and (C) above. Just enter the right choice in the blank. No reasoning is necessary.\n",
     "\n",
@@ -463,9 +480,10 @@
    "562505d567faf02dfc9388e81e89d07b",
    "3eed5a695ec9bfdc9597e51c518003d6",
    "562505d567faf02dfc9388e81e89d07b",
-   "b87bc7c1b0beb303bfddfe4b663c89c5",
+   "7da8ef019a9c72997cb16462a99284ba",
+   "e4d26c77ff61c1b15c06d6f82e0e53dc",
    "562505d567faf02dfc9388e81e89d07b",
-   "2738bed077c25aedb2c284a1c0a3c35e",
+   "1436eb83e255da6697273098f1f5a491",
    "562505d567faf02dfc9388e81e89d07b",
    "b8a5b61177def866afb483820b2f26e6",
    "562505d567faf02dfc9388e81e89d07b",
